components/nodejs-urgent-care1/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: my-application-2
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: nodejs-urgent-care1
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elnodejs-urgent-care1
  namespace: eyuen
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-nodejs-urgent-care1
    weight: null
status: {}
